# array-programming-benchmarks

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  download_frostt.sh  download_suitesparse.sh  pytest.ini  requirements.txt  unpack_suitesparse.sh  valid-suitesparse.txt
data/: bench_ufunc_sparse_xor_10_010000_A.txt  bench_ufunc_sparse_xor_10_010000_B.txt  bench_ufunc_sparse_xor_10_010000_C.txt
numpy/: conftest.py  image.py  minmax.py  threshold.py  ufuncs.py  util.py  windowing.py
results/numpy/: numpy_ufuncsbenches_2021_03_10_181127.csv  numpy_ufuncsbenches_2021_03_10_181127.json
scripts/: bench_csv_aggregator.py  download_suitesparse.sh  frostt_taco_runner.sh  image_runner.sh  image_taco_runner.sh  minimax_runner.sh  minimax_taco_runner.sh  suitesparse_runner.sh  taco_bench_aggregator.py  tensor_plotter.py  util.py
taco/: CMakeLists.txt  bench.cpp  bench.h  graphblas.cpp  image.cpp  iter-spaces.cpp  main.cpp  minimax.cpp  threshold.cpp  ufuncs.cpp  windowing.cpp
